feat: 회원가입 프로필 저장 및 가입 상태 가드 구현 (#111)
* feat: 회원가입 프로필 저장 및 가입 상태 가드 구현

* docs: 불필요한 작업 문서와 스크린샷 제거

* refactor: 인증 상태와 화면 분기 및 이미지 선택 props 명시화

* fix: 프로필 조회 재로그인 및 가입 사진 삭제 경로 보완
